[package]
name = "valor-example-basic"
version = "0.0.0"
authors = ["Jason Nall <jsonnull@gmail.com>"]
workspace = "../.."
edition = "2018"

[[bin]]
name = "valor-example-basic"
path = "main.rs"

[dependencies]
valor = { path = "../../src/valor" }
valor_camera = { path = "../../src/valor_camera" }
valor_scene = { path = "../../src/valor_scene" }
