[package]
name = "valor"
version = "0.0.0-test"
authors = ["Jason Nall <jsonnull@gmail.com>"]
workspace = "../.."
description = "Ergonomic rendering engine for games in Rust."
license = "MIT"

[lib]
name = "valor"
path = "src/lib.rs"

[dependencies]
glium = "0.17.1"
glutin = "0.9.2"
cgmath = "0.15.0"
id_tree = "1.1.3"
